# app/module/review/handler.go
@@ -1,7 +1,10 @@
 package review
 
 import (
-	"bitereview/middleware"
+	"bitereview/errors"
+	"bitereview/helper"
+	"bitereview/param"
+	"bitereview/utils"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -16,13 +19,57 @@ func NewReviewHandler(service *ReviewService) *ReviewHandler {
 	}
 }
 
-func (rh *ReviewHandler) GetReviewsByRestaurantId(c *fiber.Ctx) error {
-	return nil
+// @Summary Создать обзор
+// @Tags Обзоры
+// @Security ApiKeyAuth
+// @Accept json
+// @Produce json
+// @Param restaurantId path string true "ID ресторана"
+// @Success 200 {object} entity.Review
+// @Failure 400 {object} helper.ErrorResponse
+// @Router /api/v1/public/review/{restaurantId} [post]
+func (rh *ReviewHandler) CreateReview(c *fiber.Ctx) error {
+	_, userId, err := utils.GetJwtUserLocalWithParsedID(c)
+
+	if err != nil {
+		return helper.SendError(c, err, errors.Unauthorized)
+	}
+
+	data, err := GetSerializedReview(c)
+
+	if err != nil {
+		return helper.SendError(c, err, errors.RepositoryError)
+	}
+
+	restId, err := param.ParamPrimitiveID(c, "restaurantId")
+
+	if err != nil {
+		return helper.SendError(c, err, errors.ValidationError)
+	}
+
+	review, serr := rh.reviewService.CreateReview(userId, restId, &data)
+
+	return helper.SendSomething(c, &review, serr)
 }
 
-func (rh *ReviewHandler) RegisterRoutes(g fiber.Router) {
-	reviewRoute := g.Group("/review", middleware.JwtAuthMiddleware)
+// @Summary Получить обзоры
+// @Tags Обзоры | Public
+// @Accept json
+// @Produce json
+// @Param restaurantId path string true "ID ресторана"
+// @Param limit query int false "Количество"
+// @Param offset query int false "Смещение"
+// @Success 200 {array} entity.Review
+// @Failure 400 {object} helper.ErrorResponse
+// @Router /api/v1/public/review/{restaurantId} [get]
+func (rh *ReviewHandler) GetReviewsByRestaurantId(c *fiber.Ctx) error {
+	restId, err := param.ParamPrimitiveID(c, "restaurantId")
+	if err != nil {
+		return helper.SendError(c, err, errors.ValidationError)
+	}
 
-	// TODO: Limit / Offset
-	reviewRoute.Get("/:restaurantId", rh.GetReviewsByRestaurantId)
+	limit, offset := param.GetLimitOffset(c)
+
+	reviews, serr := rh.reviewService.GetReviewsByRestaurantId(restId, limit, offset)
+	return helper.SendSomething(c, reviews, serr)
 }
